# hello_poetry_ci

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_ci.py
