[tool.poetry]
name = "hello_poetry_ci"
version = "0.1.0"
description = ""
authors = ["lassepe <lasse.peters@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
