[tool.poetry]
name = "hello_poetry_ci"
version = "0.1.0"
description = ""
authors = ["lassepe <lasse.peters@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
pytest = "^6.2.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hello_poetry_ci"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
